--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "fluent-ffmpeg",
-  "version": "2.1.2",
+  "name": "@piggins/fluent-ffmpeg",
+  "version": "2.1.4",
   "description": "A fluent API to FFMPEG (http://www.ffmpeg.org)",
   "keywords": [
     "ffmpeg"
